# ontorag-playground

./: .env.example  .gitignore  README.md  SPEC.md  daily_collect.sh  pyproject.toml
domains/movie/: acl_rules.yaml  connector.py  inference_rules.yaml  mapping.yaml  mapping_credits.yaml  schema.ttl  schema_era.ttl
engine/: cli.py
engine/acl/: __init__.py  linker.py
engine/api/: main.py
engine/api/routes/: chat.py  graph.py  ingest.py  ui.py
engine/inference/: __init__.py  extractor.py
engine/ingest/: __init__.py  mapper.py
engine/query/: __init__.py  router.py
tests/: conftest.py  test_engine.py  test_inference.py
web/templates/: base.html  chat.html  graph.html
