[project]
name = "ontorag-playground"
version = "0.1.0"
description = "Domain-neutral, ontology-grounded knowledge-graph chatbot engine. Swap domains/ to change domain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115",
    "fastapi-mcp>=0.4",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "rdflib>=7.0",
    "typer[all]>=0.12",
    "ontorag",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
playground = "engine.cli:app"

[tool.uv.sources]
ontorag = { path = "../ontorag", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "web"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["engine"]
omit = ["engine/cli.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
